Finishing out the html

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,29 @@
     <title>Portfolio Walter Hoerman</title>
 
 </head>
-
 <body>
+
+<header>
+    <nav>
+
+    </nav>
+</header>
+
+<main>
+
+    <h1>Portfolio</h1>
+    <hr>
+    <img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman">
+    <img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game">
+    <img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game">
+    <img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget">
+    <img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors">
+    
+</main>
+
+<footer>
+
+</footer>
     
 </body>
 </html>
