adding a bunch of css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 <body>
 
 <header>
+    <h1 id="nametag">Walter Hoerman</h1>
     <nav>
-
+        <a class="pagetags" href="./contact.html">Contact</a>
+        <a class="pagetags" href="./portfolio.html">Portfolio</a>
+        <a class="pagetags" href="./index.html">About</a>
     </nav>
 </header>
 
