--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,11 @@
 <body>
 
 <header>
+    <h1 id="nametag">Walter Hoerman</h1>
     <nav>
-
+        <a href="./contact.html">Contact</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./index.html">About</a>
     </nav>
 </header>
 
@@ -27,7 +30,7 @@
     <img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game">
     <img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget">
     <img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors">
-    
+
 </main>
 
 <footer>
