--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,14 @@
 </head>
 <body>
 
-<header>
-    <h1 id="nametag">Walter Hoerman</h1>
-    <nav>
-        <a href="./contact.html">Contact</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./index.html">About</a>
-    </nav>
-</header>
+    <header>
+        <h1 id="nametag">Walter Hoerman</h1>
+        <nav>
+            <a class="pagetags" href="./contact.html">Contact</a>
+            <a class="pagetags" href="./portfolio.html">Portfolio</a>
+            <a class="pagetags" href="./index.html">About</a>
+        </nav>
+    </header>
 
 <main>
 
