--- a/portfolio.html
+++ b/portfolio.html
@@ -25,16 +25,16 @@
 
     <h1>Portfolio</h1>
     <hr>
-    <img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman">
-    <img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game">
-    <img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game">
-    <img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget">
-    <img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors">
+    <a href="#"><img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman"></a>
+    <a href="#"><img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game"></a>
+    <a href="#"><img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game"></a>
+    <a href="#"><img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget"></a>
+    <a href="#"><img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors"></a>
 
 </main>
 
 <footer>
-
+    <h6>Copyright @</h6>
 </footer>
     
 </body>
