Partially converting to Flexbox

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </header>
 
 <main>
+    <section>
     <h1>About me</h1>
     <hr>
 
@@ -58,7 +59,7 @@
         
     <p>For more on my background, check out my <a href="https://www.linkedin.com/in/walter-hoerman-b086459">Linked-In profile</a></p>.             
         </p>
-
+    </section>
 </main>
 <footer>
     <h6>Copyright @</h6>
