--- a/portfolio.html
+++ b/portfolio.html
@@ -22,15 +22,15 @@
     </header>
 
 <main>
-
-    <h1>Portfolio</h1>
-    <hr>
-    <a href="#"><img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman"></a>
-    <a href="#"><img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game"></a>
-    <a href="#"><img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game"></a>
-    <a href="#"><img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget"></a>
-    <a href="#"><img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors"></a>
-
+    <section>
+        <h1>Portfolio</h1>
+        <hr>
+        <a href="#"><img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman"></a>
+        <a href="#"><img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game"></a>
+        <a href="#"><img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game"></a>
+        <a href="#"><img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget"></a>
+        <a href="#"><img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors"></a>
+    </section>
 </main>
 
 <footer>
