adding flex to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     </header>
 
 <main>
-    <section>
+    <section class="portfolio">
         <h1>Portfolio</h1>
         <hr>
         <a href="#"><img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman"></a>
