Re-writing it all in Flexbox

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,38 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
-    <title>Portfolio Walter Hoerman</title>
-
 </head>
 <body>
+<div class="wrapper">
+    <div class="top">
+        <div class="header">
+            <h1 id="nameplate">Walter Hoerman</h1> 
+            <div class="nav">
+                <a class="navtags" href="./contact.html">Contact</a>
+                <a class="navtags" href="./portfolio.html">Portfolio</a>
+                <a class="navtags" href="./index.html">About</a>
+            </div>
 
-    <header>
-        <nav>
-            <h1 id="nametag">Walter Hoerman</h1>
-            <a class="pagetags" href="./contact.html">Contact</a>
-            <a class="pagetags" href="./portfolio.html">Portfolio</a>
-            <a class="pagetags" href="./index.html">About</a>
-        </nav>
-    </header>
-
-<main>
-    <section class="portfolio">
-        <h1>Portfolio</h1>
-        <hr>
-        <a href="#"><img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman"></a>
-        <a href="#"><img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game"></a>
-        <a href="#"><img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game"></a>
-        <a href="#"><img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget"></a>
-        <a href="#"><img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors"></a>
-    </section>
-</main>
-
-<footer>
-    <h6>Copyright @</h6>
-</footer>
-    
+        </div>
+    </div>
+    <div class="break"></div>
+    <div class="main"n>
+        <section>
+            <div class="portfolio">
+                <h1>Portfolio</h1>
+                <hr>
+                <a href="#"><img class="portfolio" src="./assets/images/hangman.jpg" alt="Hangman"></a>
+                <a href="#"><img class="portfolio" src="./assets/images/RPG Games.jpg" alt="RPG Game"></a>
+                <a href="#"><img class="portfolio" src="./assets/images/Trivia Game.jpg" alt="Trivia Game"></a>
+                <a href="#"><img class="portfolio" src="assets/images/Rutgers info Widget.jpg" alt="Rutgers info Widget"></a>
+                <a href="#"><img class="portfolio" src="./assets/images/Rock Paper Scissors.jpg" alt="Rock Paper Scissors"></a>
+            </div>
+        </section>
+    </div>
+    <div class="break"></div>
+    <footer>
+        <h6 class="footer">Copyright @</h6>
+    </footer>
+</div>
 </body>
 </html>
